[iOS WK2] Scroll deceleration rate is wrong https://bugs.webkit.org/show_bug.cgi?id=138574 rdar://problem/18715303

Reviewed by Benjamin Poulain.

The CSS Snap Points code incorrectly set the WKScrollView's deceleration rate,
overriding the custom value that UIWebScrollView sets.

Fix by having WKScrollView store the custom rate at init time, and
using that value in -scrollViewWillBeginDragging:.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView scrollViewWillBeginDragging:]):
* UIProcess/ios/WKScrollView.h:
* UIProcess/ios/WKScrollView.mm:
(-[WKScrollView initWithFrame:]):

Canonical link: https://commits.webkit.org/156407@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@175827 268f45cc-cd09-0410-ab3c-d52691b4dbfc